--- a/view/mainview.phtml
+++ b/view/mainview.phtml
@@ -134,7 +134,7 @@ global $login_url;
                                     </div>
                                     <div class="form-group mx-5 ">
                                         <!-- Hacer la referencia por si ha olvidado la contraseña, mandar a una pagina y que saque su contraseña. -->
-                                        <a class="password-lost-link white open-modal" href="#">¿Has olvidado tu contraseña?</a>
+                                        <a class="password-lost-link white open-modal" href="<?=$URL_PATH?>/passOlvidada">¿Has olvidado tu contraseña?</a>
                                     </div>
                                 </div>
 
