--- a/view/cabeceras/headerView.phtml
+++ b/view/cabeceras/headerView.phtml
@@ -62,6 +62,8 @@ global $login_url;
     <script src="<?= $URL_PATH ?>/js/clickVip.js"></script>
     <script src="<?= $URL_PATH ?>/js/validarformulariozonavip.js"></script>
     <script src="<?= $URL_PATH ?>/Pawel/jquery.creditCardValidator.js"></script>
+    <script src="<?= $URL_PATH ?>/js/passOlvidada.js"></script>
+    <script src="<?= $URL_PATH ?>/js/changePass.js"></script>
     <!-- Alberto -->
     <script src="<?= $URL_PATH ?>/js/validacionPreFormulario.js"></script>
      
