--- a/view/usuarios/busquedaUsuario.phtml
+++ b/view/usuarios/busquedaUsuario.phtml
@@ -4,7 +4,7 @@ use dawfony\Ti;
 global $URL_PATH;
 ?>
 
-<?php Ti::extend("view/MainView.phtml"); ?>
+<?php Ti::extend("view/cabeceras/"); ?>
 
 <?php Ti::startBlock("content"); ?>
 <h1>Busqueda</h1>
