--- a/view/vip/pedido.phtml
+++ b/view/vip/pedido.phtml
@@ -1,6 +1,6 @@
 <?php
 global $URL_PATH;
-\dawfony\Ti::extend("view/headerView.phtml");
+\dawfony\Ti::extend("view/cabeceras/headerView.phtml");
 \dawfony\Ti::endExtend(); 
 ?>
 
@@ -48,7 +48,7 @@ global $URL_PATH;
     </div>
 
 </body>
-<?php \dawfony\Ti::extend("view/footerView.phtml"); ?>
+<?php \dawfony\Ti::extend("view/cabeceras/footerView.phtml"); ?>
 <?php \dawfony\Ti::endExtend(); ?>
 <html>
 
