--- a/view/vip/zonaVip.phtml
+++ b/view/vip/zonaVip.phtml
@@ -2,7 +2,7 @@
 // necesitamos la trayectoria de la URL para formar las rutas:
 global $URL_PATH;
 global $login_url;
-\dawfony\Ti::extend("view/headerView.phtml"); 
+\dawfony\Ti::extend("view/cabeceras/headerView.phtml"); 
 \dawfony\Ti::endExtend();
 ?>
 <body class="imagen-fondo-body" style="background-image: url('<?= $URL_PATH ?>/assets/fotosInterfaces/fondoBody.png');
@@ -164,7 +164,7 @@ global $login_url;
             </div>
         </div>
     </div>
-    <?php \dawfony\Ti::extend("view/footerView.phtml"); ?>
+    <?php \dawfony\Ti::extend("view/cabeceras/footerView.phtml"); ?>
     <?php \dawfony\Ti::endExtend(); ?>
 </body>
 
