--- a/view/mainview.phtml
+++ b/view/mainview.phtml
@@ -2,7 +2,7 @@
 // necesitamos la trayectoria de la URL para formar las rutas:
 global $URL_PATH;
 global $login_url;
-\dawfony\Ti::extend("view/headerView.phtml");
+\dawfony\Ti::extend("view/cabeceras/headerView.phtml");
 \dawfony\Ti::endExtend();
 ?>
 
@@ -372,7 +372,7 @@ global $login_url;
                 </div>
             </div>
         </form>
-        <?php \dawfony\Ti::extend("view/footerView.phtml"); ?>
+        <?php \dawfony\Ti::extend("view/cabeceras/footerView.phtml"); ?>
         <?php \dawfony\Ti::endExtend(); ?>
 </body>
 
