--- a/view/registro/cuentaActivada.phtml
+++ b/view/registro/cuentaActivada.phtml
@@ -3,7 +3,7 @@
 use \dawfony\Ti;
 global $URL_PATH;
 global $login_url;
-\dawfony\Ti::extend("view/headerView.phtml"); 
+\dawfony\Ti::extend("view/cabeceras/headerView.phtml"); 
 \dawfony\Ti::endExtend(); 
 ?>
 
@@ -36,7 +36,7 @@ global $login_url;
                 </div><br>
             </div>
             <br>
-            <?php Ti::extend("view/footerView.phtml"); ?>
+            <?php Ti::extend("view/cabeceras/footerView.phtml"); ?>
             <?php Ti::endExtend(); ?>
         </div>
 </body>
