--- a/view/usuarios/busquedaUsuario.phtml
+++ b/view/usuarios/busquedaUsuario.phtml
@@ -4,12 +4,52 @@ use dawfony\Ti;
 global $URL_PATH;
 ?>
 
-<?php Ti::extend("view/cabeceras/"); ?>
+<?php Ti::extend("view/MainView.phtml"); ?>
 
 <?php Ti::startBlock("content"); ?>
-<h1>Busqueda</h1>
 
-<?php var_dump($usuario) ?>
+    <div class="container">
+        <div class="container fondo-personas">
+            <div class="grid-container-sesion container-fluid">
+                <!-- sacamos lista de todas esas personas que tengan ese nombre o esa coincidencia en gustos o aficiones -->
+                <?php foreach ($sacarLista as $sacarListBusqueda) :  ?>
+                    <div class="container-images-sesion container-fluid">
+                        <img class="imagenes-genero-sesion" src="<?= $URL_PATH ?>/assets/fotosUsuarios/fotos<?= $sacarListBusqueda->genero?>s/<?= $sacarListBusqueda->foto ?>" alt="no_foto">
+                        <!-- crear ruta para que nos lleve al perfil del usuario clickeado con su login-->
+                        <a href="<?= $URL_PATH ?>/perfilUsuario/<?= $sacarListBusqueda->login ?>">
+                            <div class="middle">
+                                <div class="text style-font">
+                                    <b><?= $sacarListBusqueda->login ?></b><br><?= $sacarListBusqueda->edad ?> años<br> <?= $sacarListBusqueda->ubicacion ?>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                <?php endforeach; ?>
+            </div>
+        </div>
+
+        <nav aria-label="...">
+            <ul class="pagination">
+                <li class="page-item <?= ($pagina  <= 1 ? "disabled" : "") ?>">
+                    <a class="page-link" href="<?= $ruta . ($pagina - 1) ?>" tabindex="-1" aria-disabled="true">Anterior</a>
+                </li>
+                <?php
+                for ($i = 1; $i <= $numpaginas; $i++):?>
+
+                    <li class="page-item ">
+                        <a class="page-link" href="<?= $ruta ?><?= $i ?>"><?= $i ?></a>
+                    </li>
+
+                <?php
+                    endfor;
+                ?>
+                <li class="page-item <?= ($pagina + 1 > $numpaginas ? "disabled" : "") ?>">
+                    <a class="page-link" href="<?= $ruta . ($pagina + 1) ?>" aria-disabled="true">Siguiente</a>
+                </li>
+            </ul>
+        </nav>
+        <a href="<?= $URL_PATH ?>/" class="btn btn-primary  boton-confirm-tarjet pedido-btn" >VOLVER</a>
+    </div>
 
 <?php Ti::endBlock(); ?>
 
