--- a/view/usuarios/busquedaUsuario.phtml
+++ b/view/usuarios/busquedaUsuario.phtml
@@ -12,7 +12,7 @@ global $URL_PATH;
         <div class="container fondo-personas">
             <div class="grid-container-sesion container-fluid">
                 <!-- sacamos lista de todas esas personas que tengan ese nombre o esa coincidencia en gustos o aficiones -->
-                <?php foreach ($sacarLista as $sacarListBusqueda) :  ?>
+                <?php foreach ($sacarLista as $sacarListBusqueda) :  if($sacarListBusqueda->genero == $busco): ?>
                     <div class="container-images-sesion container-fluid">
                         <img class="imagenes-genero-sesion" src="<?= $URL_PATH ?>/assets/fotosUsuarios/fotos<?= $sacarListBusqueda->genero?>s/<?= $sacarListBusqueda->foto ?>" alt="no_foto">
                         <!-- crear ruta para que nos lleve al perfil del usuario clickeado con su login-->
@@ -24,7 +24,7 @@ global $URL_PATH;
                             </div>
                         </a>
                     </div>
-                <?php endforeach; ?>
+                <?php endif; endforeach;  ?>
             </div>
         </div>
 
