--- a/view/registro/registroForm.phtml
+++ b/view/registro/registroForm.phtml
@@ -140,23 +140,23 @@ global $login_url;
                                             <textarea name="loquebuscas" id="loquebuscas" rows="8" cols="35" maxlength="150" style="resize: none;" oninput="sendCounter2()"> </textarea>
                                         </div>
                                         <div class="col-md-3 ml-5">
-                                            <br><label class="style-font">Aficciones:</label><br>
+                                            <br><label class="style-font">Aficiones:</label><br>
                                             <span id="errCheckboxes"></span>
                                             <div class="checkbox">
                                                 <div class="chiller_cb">
-                                                    <input type="checkbox" value="deportes" id="deportes" name="aficciones[]" class="aficciones1" onchange="" />
+                                                    <input type="checkbox" value="deportes" id="deportes" name="aficiones[]" class="aficiones1" onchange="" />
                                                     <label for="deportes">Deportes</label><span></span>
                                                 </div><br>
                                                 <div class="chiller_cb">
-                                                    <input type="checkbox" value="cultura" id="cultura" name="aficciones[]" class="aficciones1" onchange="" />
+                                                    <input type="checkbox" value="cultura" id="cultura" name="aficiones[]" class="aficiones1" onchange="" />
                                                     <label for="cultura">Cultura</label><span></span>
                                                 </div> <br>
                                                 <div class="chiller_cb">
-                                                    <input type="checkbox" value="instrumentos" id="instrumentos" name="aficciones[]" class="aficciones1" onchange="" />
+                                                    <input type="checkbox" value="instrumentos" id="instrumentos" name="aficiones[]" class="aficiones1" onchange="" />
                                                     <label for="instrumentos">Instrumentos</label><span></span>
                                                 </div><br>
                                                 <div class="chiller_cb">
-                                                    <input type="checkbox" value="otras" id="otras" name="aficciones[]" class="aficciones1" onchange="" />
+                                                    <input type="checkbox" value="otras" id="otras" name="aficiones[]" class="aficiones1" onchange="" />
                                                     <label for="otras">Otras</label><span></span>
                                                 </div>
 
